@@ -44,7 +44,7 @@ import org.jabref.model.metadata.SelfContainedSaveOrder;
 import org.jabref.model.study.FetchResult;
 import org.jabref.model.study.QueryResult;
 import org.jabref.model.study.Study;
-import org.jabref.model.study.StudyDatabase;
+import org.jabref.model.study.StudyCatalog;
 import org.jabref.model.study.StudyQuery;
 import org.jabref.model.util.FileUpdateMonitor;
 
@@ -188,11 +188,11 @@ public class StudyRepository {
     ///
     /// @return List of BibEntries of type Library
     /// @throws IllegalArgumentException If a transformation from Library entry to LibraryDefinition fails
-    public List<StudyDatabase> getActiveLibraryEntries() throws IllegalArgumentException {
-        return study.getDatabases()
+    public List<StudyCatalog> getActiveLibraryEntries() throws IllegalArgumentException {
+        return study.getCatalogs()
                     .parallelStream()
-                    .filter(StudyDatabase::isEnabled)
-                    .collect(Collectors.toList());
+                    .filter(StudyCatalog::isEnabled)
+                    .toList();
     }
 
     public Study getStudy() {
